--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Tom Stein Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -19,28 +19,28 @@
         <i class="fa fa-bars" aria-hidden="true"></i>
     </div>
     <!-- End #mobile-menu-toggle -->
-    <header>
+    <header class="sticky">
         <div id="mobile-menu-close">
-            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+            <span>Schließen</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#about">About</a>
+                <a href="#about">Über</a>
             </li>
             <li>
-                <a href="#experience">Experience</a>
+                <a href="#experience">Erfahrung</a>
             </li>
             <li>
-                <a href="#education">Education</a>
+                <a href="#education">Bildung</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="#projects">Projekte</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="#skills">Fähigkeiten</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="#contact">Kontakt</a>
             </li>
         </ul>
     </header>
@@ -48,9 +48,9 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h1>Tom Stein</h1>
+            <h2>Schüler, Softwareentwickler</h2>
+            <a href="#" class="btn-rounded-white">Lebenslauf herunterladen</a>
         </div>
         <!-- End #lead-content -->
 
@@ -69,13 +69,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
+                    <h2 class="heading">Über mich</h2>
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Ich bin ein deutscher Softwareentwickler aus NRW. Derzeit arbeite ich für <a href="https://www.fantapptic.me/de" target="_blank">Fantapptic Apps</a>.
                     </p>
                 </div>
             </div>
@@ -84,29 +82,29 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Erfahrung</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="Ende 2017">
+                <h3><a href="https://www.fantapptic.me/de" target="_blank">Fantapptic Apps</a></h3>
+                <h4>Android App für die Fahrschule Potjans</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Entwicklung einer Android App zur Übersicht der Theoriestunden für die Fahrschule Potjans in Dülmen.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="Mai 2017">
+                <h3>It-Talents</h3>
+                <h4>Rucksackproblem (I/O Knapsack)</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Entwicklung einer möglichen <a href="https://github.com/ScholliYT/Rucksackproblem" target="_blank">Lösung</a> für das I/O Knapsack Problem in Unity.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="Mitte 2015">
+                <h3>World robot Olympiad</h3>
+                <h4>Programmierung, Bau</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Teilnahme an der World robot Olympiad 2015 in Deutschland mit Erfolg bis ins Deutschlandfinale. 
                 </p>
             </div>
         </div>
@@ -114,30 +112,38 @@
     <!-- End #experience -->
 
     <div id="education">
-        <h2 class="heading">Education</h2>
+        <h2 class="heading">Bildung</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+            <h3>Richard-von-Weizsäcker-Berufskolleg Dülmen</h3>
+            <span class="education-date">Juli 2016 - Juli 2019</span>
+            <h4>Allgemeine Hochschulreife mit Schwerpunkt in Mathematik und Informatik</h4>
+            <ul>
+                <li>
+                    Mathematik LK
+                </li>
+                <li>
+                    Informatik LK
+                </li>
+                <li>
+                    Robotik
+                </li>
+            </ul>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Anette-von-Droste-Hülshoff Gymnasium Dülmen</h3>
+            <span class="education-date">Juli 2011 - Juni 2016</span>
+            <h4>Mittlere Reife (Zulassung für die Oberstufe)</h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Mathematik
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Physik, Chemie
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Robotik AG
                 </li>
             </ul>
         </div>
@@ -146,20 +152,22 @@
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading">Projekte</h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/potjansapp.png">
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>App für die Fahrschule Potjans</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            App zur Übersicht der Theoriestunden der 
+Fahrschule Potjans. Man kann also schnell und einfach übers Handy 
+checken, wann man anzutreten hat.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://play.google.com/store/apps/details?id=me.fantapptic.potjansApp" target="_blank">Porjekt anzeigen</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -167,15 +175,52 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/16x16RGBMatrix.png">
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>16x16 RGB LED Matrix</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Diese Matrix wird von einem Teensy 3.6 mit 
+180MHz angesteuert. Zudem sind 3 TLC5940 LED Treiber ICs und 2 74CH595 
+Shiftregister verbaut. Die Matrix kann über das DMX Protokoll über WiFi 
+gesteuert werden.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://scholliyt.github.io/LED-Matrix-16x16/" target="_blank">Porjekt anzeigen</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/10x10RGBMatrix.png">
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>10x10 RGB LED Matrix</h3>
+                        <p>
+                            Diese Matrix wurde mit mit 5 74CH595 
+Shiftregistern gebaut, welche von einem Tennsy 3.6 mit 180MHz gesteuert 
+werden. Derzeit ist eine 8 bit Farbtiefe auf jeder LED möglich.
+                        </p>
+                        <a href="https://github.com/ScholliYT/LedMatirx/blob/master/10x10/LedMatrixBaseCode/LedMatrixBaseCode.ino" target="_blank">Porjekt anzeigen</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/IPChat.png">
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>TCP/IP Text based chat</h3>
+                        <p>
+                            Diese Software ermöglicht es Textnachrichten
+ über das TCP/IP Protokoll (im lokalen Netzwerk) zu versenden.
+                        </p>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -186,46 +231,29 @@
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Fähigkeiten</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Android</li>
+            <li>Firebase</li>
+            <li>C# (.Net)</li>
+            <li>Unity</li>
+            <li>Arduino (C/C++)</li>
+            <li>IoT</li>
+            <li>Raspberry Pi</li>
+            <li>HTML</li>
         </ul>
     </div>
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2>Kontakt</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
+                <input type="hidden" name="_subject" value="Kontakt Anfrage von persoenlicher Webiste" />
+                <input type="email" name="_replyto" placeholder="Email" required>
+                <textarea name="message" placeholder="Nachricht" required></textarea>
+                <button type="submit">Senden</button>
             </form>
         </div>
         <!-- End #contact-form -->
@@ -237,7 +265,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2017 Tom Stein
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -248,19 +276,13 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/ScholliYT" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                            <a href="https://stackoverflow.com/users/6162078/tom-stein" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/ScholliYT" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
