--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Ich bin ein deutscher Softwareentwickler aus NRW. Derzeit arbeite ich für <a href="https://www.fantapptic.me/de" target="_blank">Fantapptic Apps</a>.
+                        Ich bin ein deutscher Schüler aus NRW. Derzeit bin ich 17 Jahre alt und bestrebe die allgemeine Hochschulreife im Bereich Mathematik & Informatik. Hobbymäßig arbeite ich für <a href="https://www.fantapptic.me/de" target="_blank">Fantapptic Apps</a>.
                     </p>
                 </div>
             </div>
@@ -167,7 +167,7 @@
 Fahrschule Potjans. Man kann also schnell und einfach übers Handy 
 checken, wann man anzutreten hat.
                         </p>
-                        <a href="https://play.google.com/store/apps/details?id=me.fantapptic.potjansApp" target="_blank">Porjekt anzeigen</a>
+                        <a href="https://play.google.com/store/apps/details?id=me.fantapptic.potjansApp" target="_blank">Projekt anzeigen</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -186,7 +186,7 @@ checken, wann man anzutreten hat.
 Shiftregister verbaut. Die Matrix kann über das DMX Protokoll über WiFi 
 gesteuert werden.
                         </p>
-                        <a href="https://scholliyt.github.io/LED-Matrix-16x16/" target="_blank">Porjekt anzeigen</a>
+                        <a href="https://scholliyt.github.io/LED-Matrix-16x16/" target="_blank">Projekt anzeigen</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -204,7 +204,7 @@ gesteuert werden.
 Shiftregistern gebaut, welche von einem Tennsy 3.6 mit 180MHz gesteuert 
 werden. Derzeit ist eine 8 bit Farbtiefe auf jeder LED möglich.
                         </p>
-                        <a href="https://github.com/ScholliYT/LedMatirx/blob/master/10x10/LedMatrixBaseCode/LedMatrixBaseCode.ino" target="_blank">Porjekt anzeigen</a>
+                        <a href="https://github.com/ScholliYT/LedMatirx/blob/master/10x10/LedMatrixBaseCode/LedMatrixBaseCode.ino" target="_blank">Projekt anzeigen</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -218,8 +218,7 @@ werden. Derzeit ist eine 8 bit Farbtiefe auf jeder LED möglich.
                     <div class="project-info">
                         <h3>TCP/IP Text based chat</h3>
                         <p>
-                            Diese Software ermöglicht es Textnachrichten
- über das TCP/IP Protokoll (im lokalen Netzwerk) zu versenden.
+                            Diese Software ermöglicht es Textnachrichten über das TCP/IP Protokoll (im lokalen Netzwerk) zu versenden.
                         </p>
                     </div>
                     <!-- End .project-info -->
