--- a/index.html
+++ b/index.html
@@ -157,6 +157,22 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/LightTron.png">
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>LightTron 9000</h3>
+                        <p>
+                            Eine LED Lampe basierend auf dem Gefäs: IKEA DROPPAR
+                        </p>
+                        <a href="https://imgur.com/a/a9eaA" target="_blank">Projekt anzeigen</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/potjansapp.png">
                     </div>
                     <!-- End .project-image -->
