Lebenslauf + LightTron 9000 Video

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Tom Stein</h1>
             <h2>Schüler, Softwareentwickler</h2>
-            <a href="#" class="btn-rounded-white">Lebenslauf herunterladen</a>
+            <a href="downloads/Lebenslauf.pdf" download class="btn-rounded-white">Lebenslauf herunterladen</a>
         </div>
         <!-- End #lead-content -->
 
@@ -166,6 +166,8 @@
                             Eine LED Lampe basierend auf dem Gefäs: IKEA DROPPAR
                         </p>
                         <a href="https://imgur.com/a/a9eaA" target="_blank">Projekt anzeigen</a>
+                        <br>
+                        <a href="https://www.youtube.com/watch?v=m_nvXOcZSn4" target="_blank">Video anzeigen</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
