--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Erfahrung</h2>
         <div id="experience-timeline">
+            <div data-date="März 2018">
+                <h3><a href="https://www.fantapptic.me/de" target="_blank">HK Consulting GmbH</a></h3>
+                <h4>Unterstützung der Entwicklungsabteilung</h4>
+                <p>
+                    In diese Zeit unterstützte ich die Entwicklungsabteilung der HK Consulting GmbH. 
+                    Zu den verwendeten Technologien zählen c#, .NET, WPF, SQL ...
+                </p>
+            </div>
+
             <div data-date="Ende 2017">
                 <h3><a href="https://www.fantapptic.me/de" target="_blank">Fantapptic Apps</a></h3>
                 <h4>Android App für die Fahrschule Potjans</h4>
