--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Erfahrung</h2>
         <div id="experience-timeline">
+            <div data-date="Juni 2018">
+                <h3>ROBOCOM 2018</h3>
+                <h4>Programmierung, Bau</h4>
+                <p>
+                    Erfolgreiche Teilnahme an der <a href="https://www.w-hs.de/robocom-2018/" target="_blank">ROBOCOM 2018</a> (2. Platz) der Westfälischen Hochschule in Gelsenkirchen. 
+                </p>
+            </div>
+
             <div data-date="März 2018">
                 <h3><a href="https://www.fantapptic.me/de" target="_blank">HK Consulting GmbH</a></h3>
                 <h4>Unterstützung der Entwicklungsabteilung</h4>
