--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@ werden. Derzeit ist eine 8 bit Farbtiefe auf jeder LED möglich.
             <li>Java</li>
             <li>Android</li>
             <li>Firebase</li>
+            <li>Flutter</li>
             <li>C# (.Net)</li>
             <li>Unity</li>
             <li>Arduino (C/C++)</li>
