Fixed contact form

--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@ werden. Derzeit ist eine 8 bit Farbtiefe auf jeder LED möglich.
     <div id="contact">
         <h2>Kontakt</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Kontakt Anfrage von persoenlicher Webiste" />
+            <form method="POST" action="https://formspree.io/tom.ein.stein@t-online.de">
+                <input type="hidden" name="_subject" value="Kontaktanfrage von tomstein.me" />
                 <input type="email" name="_replyto" placeholder="Email" required>
                 <textarea name="message" placeholder="Nachricht" required></textarea>
                 <button type="submit">Senden</button>
