--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             </div>
 
             <div data-date="März 2018">
-                <h3><a href="https://www.fantapptic.me/de" target="_blank">HK Consulting GmbH</a></h3>
+                <h3><a href="http://www.hkconsulting.de" target="_blank">HK Consulting GmbH</a></h3>
                 <h4>Unterstützung der Entwicklungsabteilung</h4>
                 <p>
-                    In diese Zeit unterstützte ich die Entwicklungsabteilung der HK Consulting GmbH. 
+                    In dieser Zeit unterstützte ich die Entwicklungsabteilung der HK Consulting GmbH. 
                     Zu den verwendeten Technologien zählen c#, .NET, WPF, SQL ...
                 </p>
             </div>
