--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@ werden. Derzeit ist eine 8 bit Farbtiefe auf jeder LED möglich.
             <li>Arduino (C/C++)</li>
             <li>IoT</li>
             <li>Raspberry Pi</li>
+            <li>Python</li>
             <li>HTML</li>
         </ul>
     </div>
