Added Project: DrikoPlinko

--- a/index.html
+++ b/index.html
@@ -180,9 +180,10 @@
                     <div class="project-info">
                         <h3>LightTron 9000</h3>
                         <p>
-                            Eine LED Lampe basierend auf dem Gefäs: IKEA DROPPAR
+                            Eine LED Lampe basierend auf dem Gefäs: IKEA DROPPAR. Als Mikrocontroller wird ein ESP8266 verwendet, welcher sich mit dem WLAN verbindet. 
+                            Befehle können per MQTT an die Lampe gesendet werden.
                         </p>
-                        <a href="https://imgur.com/a/a9eaA" target="_blank">Projekt anzeigen</a>
+                        <a href="https://imgur.com/a/a9eaA" target="_blank">Bilder anzeigen</a>
                         <br>
                         <a href="https://www.youtube.com/watch?v=m_nvXOcZSn4" target="_blank">Video anzeigen</a>
                     </div>
@@ -198,11 +199,27 @@
                     <div class="project-info">
                         <h3>App für die Fahrschule Potjans</h3>
                         <p>
-                            App zur Übersicht der Theoriestunden der 
-Fahrschule Potjans. Man kann also schnell und einfach übers Handy 
-checken, wann man anzutreten hat.
+                            App zur Übersicht der Theoriestunden der Fahrschule Potjans.
+                            Man kann also schnell und einfach übers Handy checken, wann man anzutreten hat.
                         </p>
                         <a href="https://play.google.com/store/apps/details?id=me.fantapptic.potjansApp" target="_blank">Projekt anzeigen</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/drinkoplinko.png">
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Drinko Plinko</h3>
+                        <p>
+                            Der etwas andere Flaschenöffner :) </br>
+                            Der Kronkorken fällt durch durch mehere Ebenen und trifft in einem der unteren Fächer auf. 
+                        </p>
+                        <a href="https://imgur.com/a/JkRvDHt" target="_blank">Bilder anzeigen</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -216,10 +233,8 @@ checken, wann man anzutreten hat.
                     <div class="project-info">
                         <h3>16x16 RGB LED Matrix</h3>
                         <p>
-                            Diese Matrix wird von einem Teensy 3.6 mit 
-180MHz angesteuert. Zudem sind 3 TLC5940 LED Treiber ICs und 2 74CH595 
-Shiftregister verbaut. Die Matrix kann über das DMX Protokoll über WiFi 
-gesteuert werden.
+                            Diese Matrix wird von einem Teensy 3.6 mit 180MHz angesteuert. Zudem sind 3 TLC5940 LED Treiber ICs und 2 74CH595 Shiftregister verbaut.
+                            Die Matrix kann über das DMX Protokoll über WiFi gesteuert werden.
                         </p>
                         <a href="https://scholliyt.github.io/LED-Matrix-16x16/" target="_blank">Projekt anzeigen</a>
                     </div>
@@ -235,9 +250,8 @@ gesteuert werden.
                     <div class="project-info">
                         <h3>10x10 RGB LED Matrix</h3>
                         <p>
-                            Diese Matrix wurde mit mit 5 74CH595 
-Shiftregistern gebaut, welche von einem Tennsy 3.6 mit 180MHz gesteuert 
-werden. Derzeit ist eine 8 bit Farbtiefe auf jeder LED möglich.
+                            Diese Matrix wurde mit mit 5 74CH595 Shiftregistern gebaut, welche von einem Tennsy 3.6 mit 180MHz gesteuert werden. 
+                            Derzeit ist eine 8 bit Farbtiefe auf jeder LED möglich.
                         </p>
                         <a href="https://github.com/ScholliYT/LedMatirx/blob/master/10x10/LedMatrixBaseCode/LedMatrixBaseCode.ino" target="_blank">Projekt anzeigen</a>
                     </div>
