Added Project: LED Headset stand

--- a/index.html
+++ b/index.html
@@ -210,6 +210,23 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/HeadsetStand.png">
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Beleuchteter Headsethalter</h3>
+                        <p>
+                            Ein mit LEDs beleuchteter Halter fürs ein Headset / einen Kopfhörer.
+                            Zwischen den zwei Milchglasscheiben befinden sich WS2812B LEDs, welche von einem Ardunio nano angesteuert werden.
+                        </p>
+                        <a href="https://imgur.com/a/90DKLLF" target="_blank">Projekt anzeigen</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/drinkoplinko.png">
                     </div>
                     <!-- End .project-image -->
