--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
             <li>Firebase</li>
             <li>Flutter</li>
             <li>C# (.Net)</li>
+            <li>Travis</li>
             <li>Unity</li>
             <li>Arduino (C/C++)</li>
             <li>IoT</li>
