Added Linux to skills

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
             <li>Flutter</li>
             <li>C# (.Net)</li>
             <li>Travis</li>
+            <li>Linux</li>
             <li>Unity</li>
             <li>Arduino (C/C++)</li>
             <li>IoT</li>
